syntax = "proto3";

package proto_service;

service ProtoService {
  rpc SendConfig (ParamsRequest) returns (ReplyMessage) {}
}

message ParamsRequest {
  string url = 1;
  string body = 2;
}

message ReplyMessage {
  string message = 1;
}